I deleted z-index  in style.css in #closeIframe so I could touch it on website this should fix the problem

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
 
 
 #closeIframe {
-    z-index: 100;
+   
     position: absolute;
     float: right;
     right: 0;
